--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,11 +11,11 @@ dock_hsplit_1=0
 dock_hsplit_2=280
 dock_hsplit_3=-389
 dock_hsplit_4=0
+dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
 dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
-dock_9_selected_tab_idx=0
 
 [docks/FileSystem]
 
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/")
+selected_paths=PackedStringArray("res://scenes/slime.tscn")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/levels/", "res://assets/", "res://assets/sprites/", "res://assets/sounds/")
 
 [docks/History]
 
@@ -34,8 +34,8 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn")
-current_scene="res://scenes/game.tscn"
+open_scenes=PackedStringArray("res://scenes/levels/level_2.tscn")
+current_scene="res://scenes/levels/level_2.tscn"
 bottom_panel_offsets={
 "Animation": -374,
 "Audio": -450,
@@ -48,7 +48,7 @@ bottom_panel_offsets={
 "Version Control": 0
 }
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 
 [EditorWindow]
 
@@ -58,8 +58,8 @@ position=Vector2i(1920, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/coin.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/menu.gd", "res://scripts/pause.gd", "res://scripts/player.gd", "res://scripts/slime.gd"]
-selected_script="res://scripts/player.gd"
+open_scripts=["res://scripts/coin.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/menu.gd", "res://scripts/pause.gd", "res://scripts/player.gd", "res://scripts/portal.gd", "res://scripts/slime.gd"]
+selected_script="res://scripts/portal.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -67,7 +67,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1920, 0, 1932, 1100)
+floating_window_rect=Rect2i(1920, 0, 1932, 1129)
 floating_window_screen=0
 
 [ShaderEditor]
