--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,7 +11,6 @@ dock_hsplit_1=0
 dock_hsplit_2=280
 dock_hsplit_3=-389
 dock_hsplit_4=0
-dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
@@ -24,8 +23,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://scenes/slime.tscn")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/levels/", "res://assets/", "res://assets/sprites/", "res://assets/sounds/")
+selected_paths=PackedStringArray("res://scenes/levels/level_2.tscn")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://scenes/levels/", "res://assets/")
 
 [docks/History]
 
@@ -34,8 +33,8 @@ include_global=true
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/levels/level_2.tscn")
-current_scene="res://scenes/levels/level_2.tscn"
+open_scenes=PackedStringArray("res://scenes/levels/level_1.tscn")
+current_scene="res://scenes/levels/level_1.tscn"
 bottom_panel_offsets={
 "Animation": -374,
 "Audio": -450,
@@ -48,18 +47,19 @@ bottom_panel_offsets={
 "Version Control": 0
 }
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(1920, 23)
+position=Vector2i(0, 23)
+size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/coin.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/menu.gd", "res://scripts/pause.gd", "res://scripts/player.gd", "res://scripts/portal.gd", "res://scripts/slime.gd"]
-selected_script="res://scripts/portal.gd"
+open_scripts=["res://scripts/coin.gd", "res://scripts/game_manager.gd", "res://scripts/killzone.gd", "res://scripts/menu.gd", "res://scripts/pause.gd", "res://scripts/platforms_rotating.gd", "res://scripts/platform_circling.gd", "res://scripts/player.gd", "res://scripts/portal.gd", "res://scripts/slime.gd"]
+selected_script="res://scripts/killzone.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -67,7 +67,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(1920, 0, 1932, 1129)
+floating_window_rect=Rect2i(0, 0, 1932, 1129)
 floating_window_screen=0
 
 [ShaderEditor]
